test/libsolidity/syntaxTests/storageLayoutSpecifier/hex_string.sol
contract C layout at hex"616263" {}
// ----
// UnimplementedFeatureError 1834: (0-35): Code generation is not supported for contracts with specified storage layout base.
